2008-06-26  Cody Russell  <bratsche@gnome.org>

	* configure.in: Add #define GLIB_USING_SYSTEM_PRINTF
	to glibconfig.h, which specifies if GLib is using
	the system printf functions for g_print*().
	(#539999, by Tim-Philipp Müller)

2008-06-24  Paolo Borelli  <pborelli@katamail.com>

	Bug 539770 - migrate gstrfunc unit tests to gtest

	* tests/strfunc-test.c:
	* tests/testglib.c:
	* tests/strtoll-test.c:
	* tests/strtod-test.c:
	* tests/string-test.c:
	* tests/Makefile.am:
	Removed old tests.

	* glib/tests/fileutils.c:
	* glib/tests/strfuncs.c:
	* glib/tests/Makefile.am:
	Added all the old tests migrated to the new unit test framework
	and add new unit tests for some of the functions.

2008-06-23  Kristian Rietveld  <kris@imendio.com>

	* gobject/glib-mkenums.in: introduce an ENUMPREFIX substitution.

	* gio/gioenumtypes.h.template: use @ENUMPREFIX@ instead of
	hard coding "G" as prefix.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* glib/gurifuncs.c:
	  Fix markup in comment.

2008-06-21  Johan Dahlin  <jdahlin@async.com.br>

    * *.[ch]: Include "config.h" instead of <config.h>
    Command used:
    find -name \*.[ch]|xargs perl -p -i -e 's/^#include <config.h>/#include "config.h"/g'
    Rubberstamped by Mitch

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Bug 316221 - G_LOCK warns about breaking strict-aliasing rules

	* configure.in:
	* glib/gthread.h: Revert previous patch as it doesn't improve the
	situation and results in other warnings.

2008-06-16  Christian Persch  <chpe@gnome.org>

	Bug 539123 – annotate g_d[n]gettext with G_GNUC_FORMAT

	* glib/gstrfuncs.h:
	* glib/glib.symbols: Annotate some functions with G_GNUC_FORMAT. 

2008-06-19  Tor Lillqvist  <tml@novell.com>

	Bug 539074 - Cannot get exit status with g_spawn_command_line_sync()

	* glib/gspawn-win32-helper.c (main): Write also the exit status of
	the spawned process to the error report pipe. Patch by Hiroyuki
	Ikezoe.

2008-06-19  Matthias Clasen  <mclasen@redhat.com>
